--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,37 @@
   display: flex;
   justify-content: center;
   gap: 15px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.right {
+  animation: slideRight 0.5s forwards;
+}
+
+.left {
+  animation: slideLeft 0.5s forwards;
+}
+
+@keyframes slideRight {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideLeft {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .card {
@@ -42,7 +73,7 @@
   gap: 5px;
 }
 
-.swiperContainer {
+.slider-container {
   display: flex;
   justify-content: center;
 }
